# morglod_cpp_utils

./: CMakeLists.txt  LICENSE  compile_flags.txt  conanfile.txt  generate_cmake.py  generate_compile_flags.py  process_macro.py  readme.md
src/: _globals.hpp  _helpers.hpp  binary_semaphore.cpp  binary_semaphore.hpp  buf.hpp  callback_list.hpp  crc32.hpp  cubic_bezier.hpp  dynamic_cpp_call.hpp  enum_str.hpp  enum_str.md  events.md  events2.cpp  events2.hpp  events2.md  events_app.cpp  events_app.hpp  exp_lock_free_buffer.hpp  flag_set.hpp  flag_set.md  fs_create_dir.cpp  fs_create_dir.hpp  fs_preallocate_file.cpp  fs_preallocate_file.hpp  has_char_in_set.hpp  hash_combine.hpp  hmac_sha256.cpp  hmac_sha256.hpp  json_scan.hpp  json_walk.hpp  libtar_ext.hpp  log.hpp  memory.hpp  no_inline.hpp  overloaded.hpp  pad_string.hpp  profiler.cpp  profiler.hpp  read_file.cpp  read_file.hpp  (+21 more)
src/fs/: file_bulk_reader.hpp  file_bulk_reader.md  file_stream_writer.hpp  fs_buffer_size.hpp
src/hashes/: small_string_hash.cpp  small_string_hash.hpp
